tests/machine/x/swift/left_join_multi.swift
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
struct Customer: Equatable {
    var id: Int
    var name: String
}

struct Item: Equatable {
    var orderId: Int
    var sku: String
}

struct Order: Equatable {
    var customerId: Int
    var id: Int
}

struct Result: Equatable {
    var item: Item
    var name: String
    var orderId: Int
}

var customers = [Customer(id: 1, name: "Alice"), Customer(id: 2, name: "Bob")]
var orders = [Order(customerId: 1, id: 100), Order(customerId: 2, id: 101)]
var items = [Item(orderId: 100, sku: "a")]
var result = ({
	var _res: [(item: Item, name: String, orderId: Int)] = []
	for o in orders {
		for c in customers {
			if !(o.customerId == c.id) { continue }
			for i in items {
				if !(o.id == i.orderId) { continue }
				_res.append(["orderId": o.id, "name": c.name, "item": i])
			}
		}
	}
	return _res
}())
print("--- Left Join Multi ---")
for r in result {
    print(r.orderId, r.name, r.item)
}
